# rune-serve

./: .gitignore  Cargo.toml  Dockerfile  LICENSE_MIT.md  README.md
src/: main.rs  static_files.rs
static/: index.html
