[package]
name = "rune-serve"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
ngrok = "0.5.0"
pretty_env_logger = "0.4.0"
qrcode = "0.12.0"
serde_json = "1.0.64"

tokio = { version = "1.5.0", features = ["full"] }
hyper = { version = "0.14.5", features = ["full"] }
routerify = "2.0.2"
image = "0.23.14"
mime_guess = "2.0.3"
url = "2.2.2"
open = "1.7.0"

